--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="./jogodavida.js" defer></script>
-    <title>Dogapi</title>
+    <title>Lista de Jogos</title>
 </head>
 <body>
     <input id="jogo" type="text" class="categoria" placeholder="Pesquise por nome...">
